z-index bug fixes

--- a/static/css/scrollytelling.css
+++ b/static/css/scrollytelling.css
@@ -32,7 +32,7 @@ html {
 }
 
 article {
-  z-index: 2;
+  z-index: 2 !important;
   position: relative;
   padding: 0 1rem;
   max-width: 20rem;
@@ -40,7 +40,7 @@ article {
 }
 
 figure {
-  z-index: 1;
+  z-index: 1 !important;
   position: -webkit-sticky;
   position: sticky;
   left: 0;
